--- a/frontend/mono-ui/web/rainmaker/dev-packages/egov-ui-kit-dev/src/common/common/ServiceList/index.scss
+++ b/frontend/mono-ui/web/rainmaker/dev-packages/egov-ui-kit-dev/src/common/common/ServiceList/index.scss
@@ -30,9 +30,14 @@
 .service-label-cont .label-text {
   word-break: inherit;
   word-wrap: inherit;
+
+  white-space: pre-wrap;
+  word-break: break-all;
+  height: 25px;
 }
 
 @media only screen and (min-width: 768px) {
+
   .service-module-style {
     height: 140px !important;
   }
